--- a/battleship.html
+++ b/battleship.html
@@ -41,7 +41,6 @@
         <input type="button" id="fireButton" value="Fire!">
       </form>
     </div>
-    <script src="battleship.js">
-    </script>
+    <script src="battleship.js"></script>
   </body>
 </html>
