Added more documentation

--- a/index.html
+++ b/index.html
@@ -7,9 +7,18 @@
   <body>
     <header>
       <h1>Battleship</h1>
-      <h2>Based on Battleship in "HeadsFirst JavaScript" chapter</h2>
+      <h2>Based on Battleship example in "Heads First JavaScript Programming" chapter 8</h2>
     </header>
     <article>
+      <p>
+        Modifications include:
+        <ul>
+          <li>Use array length instead of constants on <i>ships</i> array and <i>ship.location</i> array. This allows any number of ships and different ships length by merely modifying the initial values in the <i>ships</i> array</li>
+          <li>Moved images and style information to appropriate subdirectory</li>
+          <li>Added <i>name</i> property to <i>ship</i> object to display when ship is sunk.</li>
+        </ul>
+      </p>
+      Current version has a single 4 ship (Battleship), two 3 ships (Cruiser), one 2 ship (Destroyer).<br>
       <a href="battleship.html">Play Battleship</a>
     </article>
   </body>
