Updated documentation for previous commit. Use of constructor.

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
           <li>Use array length instead of constants on <i>ships</i> array and <i>ship.location</i> array. This allows any number of ships and different ships length by merely modifying the initial values in the <i>ships</i> array</li>
           <li>Moved images and style information to appropriate subdirectory</li>
           <li>Added <i>name</i> property to <i>ship</i> object to display when ship is sunk.</li>
+          <li>Replaced literal construction of a 'ship' with a 'Ship' construction function</li>
         </ul>
       </p>
       Current version has a single 4 ship (Battleship), two 3 ships (Cruiser), one 2 ship (Destroyer).<br>
