replaced 'for (i = 0; i < array.length; i++)' with 'for (element of array)'

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
           <li>Moved images and style information to appropriate subdirectory</li>
           <li>Added <i>name</i> property to <i>ship</i> object to display when ship is sunk.</li>
           <li>Replaced literal construction of a 'ship' with a 'Ship' construction function</li>
+          <li>Prior to commit on 2017/02/09 19:00, used array.length property in 'for' loops. Replace with 'for (var element of array)'</li>
         </ul>
       </p>
       Current version has a single 4 ship (Battleship), two 3 ships (Cruiser), one 2 ship (Destroyer).<br>
