--- a/battleship.html
+++ b/battleship.html
@@ -36,9 +36,9 @@
           <td id="64"></td> <td id="65"></td> <td id="66"></td>
         </tr>
       </table>
-      <form>
-        <input type="text" id="guessInput" placeholder="A0">
-        <input type="button" id="fireButton" value="Fire!">
+      <form name="guess" onsubmit="handleFireButton();">
+        <input type="text" name="guessInput" placeholder="A0">
+        <input type="submit" value="Fire!">
       </form>
     </div>
     <script src="battleship.js"></script>
