--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
           <li>Replaced literal construction of a 'ship' with a 'Ship' construction function</li>
           <li>Prior to commit on 2017/02/09 19:00, used array.length property in 'for' loops. Replace with 'for (var element of array)'</li>
           <li>Changed 'hits' array from strings to boolean</li>
+          <li>Replaced event handlers with onsubmit function</li>
         </ul>
       </p>
       Current version has a single 4 ship (Battleship), two 3 ships (Cruiser), one 2 ship (Destroyer).<br>
